--- a/Ejercicio5.css
+++ b/Ejercicio5.css
@@ -3,12 +3,11 @@ body {
     margin: 0;
     padding: 0;
     background: linear-gradient(135deg, #a2d7ed, #cfd8dc);
-    color: #333;
-    
-
+    color: #333; 
+}
 
 h1 {
-    color: #60a0e0;
+    color: #36699c;
     text-align: center;
     margin-top: 50px;
     font-size: 3em;
@@ -21,6 +20,7 @@ h1 {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+    
    
 }
 
@@ -66,7 +66,7 @@ h1 {
 }
 
 .tecnologia h3 {
-    color: #2980b9;
+    color: #115684;
     margin: 0 0 10px;
     font-size: 1.5em;
 }
@@ -77,7 +77,7 @@ h1 {
 }
 
 a {
-    color: #2980b9;
+    color: #3c82b0;
     text-decoration: none;
     transition: color 0.3s ease;
 }
@@ -89,7 +89,7 @@ a:hover {
 
 
 button {
-    background-color: #2980b9;
+    background-color: #55ace6;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -100,7 +100,7 @@ button {
 }
 
 button:hover {
-    background-color: #1a6a8d;
+    background-color: #0a2e3d;
     transform: scale(1.05);
 }
 
