--- a/Ejercicio7.css
+++ b/Ejercicio7.css
@@ -1,36 +1,38 @@
 #titulo {
-    color: #2c3e50;
+    color: #000000;
     text-align: center;
     margin-top: 20px;
 }
 
+/* Selectores de clase */
 .contenido {
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
+    background-color: #a1dbee;
+    border: 1px solid #7cd4f4;
     border-radius: 5px;
     padding: 20px;
     margin: 20px;
 }
 
 .subtitulo {
-    color: #2980b9;
+    color: #4fa8c4;
 }
 
 .texto {
     color: #555;
 }
 
-
+/* Pseudo-clases */
 .enlace {
-    color: #2980b9;
+    color: #1d85ab;
     text-decoration: none;
 }
 
 .enlace:hover {
-    color: #e74c3c;
+    color: #d6877f;
     text-decoration: underline;
 }
 
+/* Estilo para el pie de página */
 #footer-texto {
     text-align: center;
     margin-top: 40px;
