--- a/practica8.css
+++ b/practica8.css
@@ -5,22 +5,29 @@
     align-items: center;
     height: 150px;
     border: 2.5px solid rgb(122, 17, 122);
+    justify-content: space-evenly;
 }
 
 .caja1{
     background-color: antiquewhite;
     padding: 15px;
     border: 1.5px solid violet;
+    margin: 5 5 5 5;
+    justify-content: space-evenly;
 }
 .caja2{
     background-color: antiquewhite;
     padding: 15px;
     border: 1.5px solid violet;
+    margin: 5 5 5 5;
+    justify-content: space-evenly;
 }
 .caja3{
     background-color: antiquewhite;
     padding: 15px;
     border: 1.5px solid violet;
+    margin: 5 5 5 5;
+    justify-content: space-evenly;
 }
 .grid-1{
     display: grid;
@@ -28,6 +35,39 @@
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "header Vertin"
     "sedebar content" "footer 4";
-    gap: 10px;
-    height: 100vh;
+    justify-content: space-evenly;
+}
+.header{
+    grid-area: header;
+    padding: 15px;
+    display: flex;
+    flex-direction: row;
+    margin: 5 5 5 5;
+    justify-content: space-evenly;
+}
+.sidebar{
+    grid-area: sidebar;
+    background-color: azure;
+    padding: 15px;
+    margin: 5 5 5 5;
+    justify-content: space-evenly;
+
+}
+.content{
+    grid-area: content;
+    background-color: aliceblue;
+    padding: 1px;
+    margin-top: 0%;
+    justify-content: space-evenly;
+}
+.footer{
+    grid-area: footer;
+    background-color: antiquewhite;
+    padding: 1px;
+    justify-content: space-evenly;
+}
+.titulo{
+    margin-top: 0%;
+    padding: 5px;
+    justify-content: space-evenly;
 }
