--- a/ejercicio3.css
+++ b/ejercicio3.css
@@ -1,38 +1,57 @@
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
+*{
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
 }
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-    text-align: center;
+
+
+/*Nicolás-Actividad 3:*/
+.contenedor{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border: 3px solid;
+    background-image: url("img-nicolas/nav.jpg");
+    background-size: auto;
+    
 }
-nav {
-    background-color: #444;
-    text-align: center;
-    padding: 0.5rem;
+
+img{
+    height: 90px;
+    width: auto;
 }
-nav a {
-    color: #fff;
-    text-decoration: none;
-    margin: 0 1rem;
+
+nav ul{
+    list-style-type: none;
+    align-items: center;
 }
-section {
-    padding: 2rem;
-    margin: 1rem;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+.titulo{
+    font-size: 60px;
 }
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1rem;
-    position: fixed;
-    bottom: 0;
+
+.c-historia{
+width: 80%;
+float: left;
+}
+
+img{
     width: 100%;
+    height: auto;
 }
+aside {
+    width: 250px;  
+    padding: 15px;  
+    margin-left: 20px;  
+    display: flex;
+}
+    footer{
+    background-color: #333;  
+    color: white;  
+    text-align: center; 
+    padding: 10px 0;  
+    position: fixed;  
+    bottom: 0;
+    width: 100%;  
+}
+
